# naive_rag_hf

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
examples/: advanced_example.py  basic_example.py
naive_rag/: __init__.py  config.py  document_loader.py  llm_wrapper.py  rag_pipeline.py  vector_store.py
rag_system/: ingestion.py  llm_integration.py  rag_system.py  retriever.py
